# greentic-examples

./: .gitignore  README.md  SECURITY_FIX_REPORT.md  pr-comment.md
.github/workflows/: codex-security-fix.yml
bindings/: acme.llm.ollama.yaml  acme.mcp.yaml  acme.messaging.telegram.yaml
pack/weather-demo/: Makefile  pack.yaml
pack/weather-demo/.packc/pack_component/: Cargo.toml
pack/weather-demo/.packc/pack_component/src/: data.rs  lib.rs
pack/weather-demo/flows/: weather_bot.ygtc
pack/weather-demo/templates/: weather_now.hbs
schemas/: ygtc.flow.schema.json
