[package]
name = "pack_component"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
greentic-interfaces = "0.4"
